:rocket: Try to fix delete of files/folder

--- a/build-node-task.yml
+++ b/build-node-task.yml
@@ -51,8 +51,8 @@ steps:
   inputs:
     targetType: 'inline'
     script: |
-      Remove-Item "${{parameters.extensionRoot}}\\${{parameters.taskName}}\dist -Force -Recurse"
-      Remove-Item "${{parameters.extensionRoot}}\\${{parameters.taskName}}\src -Force -Recurse"
-      Remove-Item "${{parameters.extensionRoot}}\\${{parameters.taskName}}\test -Force -Recurse"
+      Remove-Item -path "${{parameters.extensionRoot}}\\${{parameters.taskName}}\dist" -Force -Recurse
+      Remove-Item "${{parameters.extensionRoot}}\\${{parameters.taskName}}\src" -Force -Recurse
+      Remove-Item "${{parameters.extensionRoot}}\\${{parameters.taskName}}\test" -Force -Recurse
     workingDirectory: '${{parameters.extensionRoot}}\\${{parameters.taskName}}'
 
