--- a/build-node-task.yml
+++ b/build-node-task.yml
@@ -5,6 +5,24 @@ parameters:
   type: string
 
 steps:  
+- task: PowerShell@2
+      displayName: 'Calculate and save package.json hash'
+      inputs:
+        targetType: 'inline'
+        script: |
+          # generates a hash of all package.json and saves each on a single line on 'packagejsonhash.txt'
+          Get-FileHash -Algorithm MD5 -Path (Get-ChildItem package.json -Recurse) >> packagejsonhash.txt
+          Write-Host "Hash File saved to ${{parameters.extensionRoot}}\\${{parameters.taskName}}\packagejsonhash.txt"
+        workingDirectory: '${{parameters.extensionRoot}}\\${{parameters.taskName}}'
+
+- task: CacheBeta@0 # speed up builds by caching node_modules folder
+  inputs:
+    key: nuget|1|$(Agent.OS)|${{parameters.extensionRoot}}\\${{parameters.taskName}}\packagejsonhash.txt # hash map generated in previous step
+    path: ${{parameters.extensionRoot}}\\${{parameters.taskName}}\node_modules
+    cacheHitVar: 'npm_cache_hit' # variable that can be checked to see if it was successful
+  displayName: Cache npm packages
+  continueOnError: true
+
 - task: Npm@1
   displayName: '${{parameters.taskName}}: npm install'
   inputs:
@@ -55,6 +73,5 @@ steps:
       Remove-Item -path "${{parameters.extensionRoot}}\\${{parameters.taskName}}\src" -Force -Recurse
       Remove-Item -path "${{parameters.extensionRoot}}\\${{parameters.taskName}}\test" -Force -Recurse
       Remove-Item -path "${{parameters.extensionRoot}}\\${{parameters.taskName}}\*.js.map" -Force -Recurse
-      Remove-Item -path "${{parameters.extensionRoot}}\\${{parameters.taskName}}\node_modules" -Force -Recurse
     workingDirectory: '${{parameters.extensionRoot}}\\${{parameters.taskName}}'
 
