--- a/build-node-task.yml
+++ b/build-node-task.yml
@@ -11,14 +11,14 @@ steps:
     targetType: 'inline'
     script: |
       # generates a hash of all package.json and saves each on a single line on 'packagejsonhash.txt'
-      Get-FileHash -Algorithm MD5 -Path (Get-ChildItem package.json -Recurse) >> ${{parameters.extensionRoot}}\packagejsonhash.txt
-      Write-Host "Hash File saved to ${{parameters.extensionRoot}}\\packagejsonhash.txt"
+      Get-FileHash -Algorithm MD5 -Path (Get-ChildItem package.json -Recurse) >> packagejsonhash.txt
+      Write-Host "Hash File saved to ${{parameters.extensionRoot}}\${{parameters.taskName}}\packagejsonhash.txt"
     workingDirectory: '${{parameters.extensionRoot}}\\${{parameters.taskName}}'
 
 - task: CacheBeta@0 # speed up builds by caching node_modules folder
   inputs:
-    key: nuget|1|$(Agent.OS)|${{parameters.extensionRoot}}\packagejsonhash.txt # hash map generated in previous step
-    path: ${{parameters.extensionRoot}}\\${{parameters.taskName}}\node_modules
+    key: nuget|1|$(Agent.OS)|${{parameters.extensionRoot}}\${{parameters.taskName}}\packagejsonhash.txt # hash map generated in previous step
+    path: ${{parameters.extensionRoot}}\${{parameters.taskName}}\node_modules
     cacheHitVar: 'npm_cache_hit' # variable that can be checked to see if it was successful
   displayName: Cache npm packages
   continueOnError: true
@@ -29,13 +29,13 @@ steps:
     command: 'install'
     workingDir: '${{parameters.extensionRoot}}\\${{parameters.taskName}}'
 
-# - task: SnykSecurityScan@0
-#   inputs:
-#     serviceConnectionEndpoint: 'Snyk (Apr2020)'
-#     testType: 'app'
-#     monitorOnBuild: true
-#     failOnIssues: true
-#     testDirectory: '${{parameters.extensionRoot}}\\${{parameters.taskName}}'
+- task: SnykSecurityScan@0
+  inputs:
+    serviceConnectionEndpoint: 'Snyk (Apr2020)'
+    testType: 'app'
+    monitorOnBuild: true
+    failOnIssues: true
+    testDirectory: '${{parameters.extensionRoot}}\\${{parameters.taskName}}'
 
 - task: Npm@1
   displayName: '${{parameters.taskName}}: npm run build'
@@ -44,18 +44,18 @@ steps:
     workingDir: '${{parameters.extensionRoot}}\\${{parameters.taskName}}'
     customCommand: 'run build'
 
-# - task: Npm@1
-#   displayName: '${{parameters.taskName}}: npm run test'
-#   inputs:
-#     command: 'custom'
-#     workingDir: '${{parameters.extensionRoot}}\\${{parameters.taskName}}'
-#     customCommand: 'run test'
+- task: Npm@1
+  displayName: '${{parameters.taskName}}: npm run test'
+  inputs:
+    command: 'custom'
+    workingDir: '${{parameters.extensionRoot}}\\${{parameters.taskName}}'
+    customCommand: 'run test'
 
-# - task: PublishTestResults@2
-#   displayName: '${{parameters.taskName}}: Publish Test Results'
-#   inputs:
-#     cwd: '${{parameters.extensionRoot}}\\${{parameters.taskName}}'
-#     testRunTitle: '${{parameters.taskName}}'
+- task: PublishTestResults@2
+  displayName: '${{parameters.taskName}}: Publish Test Results'
+  inputs:
+    cwd: '${{parameters.extensionRoot}}\\${{parameters.taskName}}'
+    testRunTitle: '${{parameters.taskName}}'
 
 - task: Npm@1
   displayName: '${{parameters.taskName}}: npm run package'
