--- a/build-node-task.yml
+++ b/build-node-task.yml
@@ -29,13 +29,13 @@ steps:
     command: 'install'
     workingDir: '${{parameters.extensionRoot}}\\${{parameters.taskName}}'
 
-- task: SnykSecurityScan@0
-  inputs:
-    serviceConnectionEndpoint: 'Snyk (Apr2020)'
-    testType: 'app'
-    monitorOnBuild: true
-    failOnIssues: true
-    testDirectory: '${{parameters.extensionRoot}}\\${{parameters.taskName}}'
+# - task: SnykSecurityScan@0
+#   inputs:
+#     serviceConnectionEndpoint: 'Snyk (Apr2020)'
+#     testType: 'app'
+#     monitorOnBuild: true
+#     failOnIssues: true
+#     testDirectory: '${{parameters.extensionRoot}}\\${{parameters.taskName}}'
 
 - task: Npm@1
   displayName: '${{parameters.taskName}}: npm run build'
