--- a/build-node-tasks.yml
+++ b/build-node-tasks.yml
@@ -12,6 +12,11 @@ steps:
 - template: build-node-task.yml
   parameters:
     extensionRoot: '$(System.DefaultWorkingDirectory)\src'
+    taskName: 'ContentCopy\ContentCopyV2'
+
+- template: build-node-task.yml
+  parameters:
+    extensionRoot: '$(System.DefaultWorkingDirectory)\src'
     taskName: 'ExpectStatus\ExpectStatusV2'
 
 - template: build-node-task.yml
