:sparkles: Made DeployNuGetPackageV2 task

--- a/build-node-tasks.yml
+++ b/build-node-tasks.yml
@@ -17,6 +17,11 @@ steps:
 - template: build-node-task.yml
   parameters:
     extensionRoot: '$(System.DefaultWorkingDirectory)\src'
+    taskName: 'DeployNuGetPackage\DeployNuGetPackageV2'
+
+- template: build-node-task.yml
+  parameters:
+    extensionRoot: '$(System.DefaultWorkingDirectory)\src'
     taskName: 'ExpectStatus\ExpectStatusV2'
 
 - template: build-node-task.yml
