--- a/build-node-tasks.yml
+++ b/build-node-tasks.yml
@@ -22,6 +22,11 @@ steps:
 - template: build-node-task.yml
   parameters:
     extensionRoot: '$(System.DefaultWorkingDirectory)\src'
+    taskName: 'DeployTo\DeployToV2'
+
+- template: build-node-task.yml
+  parameters:
+    extensionRoot: '$(System.DefaultWorkingDirectory)\src'
     taskName: 'ExpectStatus\ExpectStatusV2'
 
 - template: build-node-task.yml
