--- a/build-node-tasks.yml
+++ b/build-node-tasks.yml
@@ -38,3 +38,8 @@ steps:
   parameters:
     extensionRoot: '$(System.DefaultWorkingDirectory)\src'
     taskName: 'ResetDeploy\ResetDeployV2'
+
+- template: build-node-task.yml
+  parameters:
+    extensionRoot: '$(System.DefaultWorkingDirectory)\src'
+    taskName: 'SmokeTestIfFailReset\SmokeTestIfFailResetV2'
