:bug: fix agent pool name

--- a/build-test-package_ubuntu.yml
+++ b/build-test-package_ubuntu.yml
@@ -3,7 +3,7 @@ trigger: none
 name: $(Date:yyyyMMdd)$(Rev:.r)
 
 pool:
-  name: EpinovaDxpDeploymentExtensionTestBuild_Ubuntu
+  name: Azure Pipelines
   vmImage: 'ubuntu-latest'
   demands: npm
 
