:memo: update ubuntu yml

--- a/build-test-package_ubuntu.yml
+++ b/build-test-package_ubuntu.yml
@@ -30,7 +30,7 @@ steps:
       targetType: filePath
       filePath: ./BuildScripts/CopyScripts.ps1
 
-  - template: build-node-tasks.yml
+  - template: build-node-tasks_ubuntu.yml
 
   - task: PowerShell@2
     displayName: 'Rename tasks to -TEST'
