--- a/build-node-task_ubuntu.yml
+++ b/build-node-task_ubuntu.yml
@@ -6,12 +6,14 @@ parameters:
 
 steps:  
 - task: PowerShell@2
-  displayName: 'Calculate and save package-lock.json hash'
+  displayName: '${{parameters.taskName}}:Calculate and save package-lock.json hash'
   inputs:
     targetType: 'inline'
     script: |
       # generates a hash of all package-lock.json and saves each on a single line on 'packagelockjsonhash.txt'
-      Get-FileHash -Algorithm MD5 -Path (Get-ChildItem package-lock.json -Recurse) >> packagelockjsonhash.txt
+      var hashValue = Get-FileHash -Algorithm MD5 -Path (Get-ChildItem package-lock.json -Recurse) | $.Hash
+      Write-Host "Hash: $hashValue"
+      Get-FileHash -Algorithm MD5 -Path (Get-ChildItem package-lock.json -Recurse) | $.Hash >> packagelockjsonhash.txt
       Write-Host "Hash File saved to ${{parameters.extensionRoot}}/${{parameters.taskName}}/packagelockjsonhash.txt"
     workingDirectory: '${{parameters.extensionRoot}}/${{parameters.taskName}}'
 
@@ -20,7 +22,7 @@ steps:
     key: nuget|1|$(Agent.OS)|${{parameters.extensionRoot}}/${{parameters.taskName}}/packagelockjsonhash.txt # hash map generated in previous step
     path: ${{parameters.extensionRoot}}/${{parameters.taskName}}/node_modules
     cacheHitVar: 'npm_cache_hit' # variable that can be checked to see if it was successful
-  displayName: Cache npm packages
+  displayName: '${{parameters.taskName}}: Cache npm packages'
   continueOnError: true
 
 - task: Npm@1
