--- a/build-node-task_ubuntu.yml
+++ b/build-node-task_ubuntu.yml
@@ -11,9 +11,9 @@ steps:
     targetType: 'inline'
     script: |
       # generates a hash of all package-lock.json and saves each on a single line on 'packagelockjsonhash.txt'
-      $hashValue = Get-FileHash -Algorithm MD5 -Path (Get-ChildItem package-lock.json -Recurse) | $.Hash
+      $hashValue = (Get-FileHash -Algorithm MD5 -Path (Get-ChildItem packagelockjsonhash.txt -Recurse)).Hash
       Write-Host "Hash: $hashValue"
-      Get-FileHash -Algorithm MD5 -Path (Get-ChildItem package-lock.json -Recurse) | $.Hash >> packagelockjsonhash.txt
+      $hashValue >> packagelockjsonhash.txt
       Write-Host "Hash File saved to ${{parameters.extensionRoot}}/${{parameters.taskName}}/packagelockjsonhash.txt"
     workingDirectory: '${{parameters.extensionRoot}}/${{parameters.taskName}}'
 
