--- a/build-node-task_ubuntu.yml
+++ b/build-node-task_ubuntu.yml
@@ -86,5 +86,6 @@ steps:
       Remove-Item -path "${{parameters.extensionRoot}}/${{parameters.taskName}}\src" -Force -Recurse
       Remove-Item -path "${{parameters.extensionRoot}}/${{parameters.taskName}}\test" -Force -Recurse
       Remove-Item -path "${{parameters.extensionRoot}}/${{parameters.taskName}}\*.js.map" -Force -Recurse
+      Remove-Item -path "${{parameters.extensionRoot}}/${{parameters.taskName}}\node_modules\azure-pipelines-tasks-azure-arm-rest-v2\openssl\OpenSSL License.txt" -Force -Recurse
     workingDirectory: '${{parameters.extensionRoot}}/${{parameters.taskName}}'
 
