--- a/src/SyncDxpDbToAzure/SyncDxpDbToAzureV2/tsconfig.json
+++ b/src/SyncDxpDbToAzure/SyncDxpDbToAzureV2/tsconfig.json
@@ -8,7 +8,8 @@
         "src/"
     ],
     "outDir": "dist",
-    "sourceMap": true
+    "sourceMap": true,
+    "skipLibCheck": true
     },
     "baseUrl": ".",
     "paths": {
