--- a/Pipelines_NuGet/azure-pipelines.yml
+++ b/Pipelines_NuGet/azure-pipelines.yml
@@ -21,9 +21,9 @@ resources:
 steps:
 - template: tools/set-version.1.yml@pipelines
 
-- template: nuget.3.yml@pipelines
-  parameters:
-    dotnetVersions:
-      - 6.0.x
-      - 5.0.x
-    disablePublish: true
+# - template: nuget.3.yml@pipelines
+#   parameters:
+#     dotnetVersions:
+#       - 6.0.x
+#       - 5.0.x
+#     disablePublish: true
