--- a/Pipelines_NuGet/azure-pipelines.yml
+++ b/Pipelines_NuGet/azure-pipelines.yml
@@ -24,4 +24,4 @@ steps:
       - 6.0.x
       - 5.0.x
     workingDirectory: "$(System.DefaultWorkingDirectory)/Pipelines_NuGet/src"
-    disablePublish: true
+    disablePublish: false
