--- a/Pipelines_NuGet/azure-pipelines.yml
+++ b/Pipelines_NuGet/azure-pipelines.yml
@@ -5,7 +5,11 @@ variables:
 
 name: $(major).$(minor).$(rev:r) #Build.BuildNumber
 
-trigger: none
+trigger: 
+  batch: "true"
+  branches:
+    include:
+      - main
 
 pool:
   vmImage: 'ubuntu-latest'
