--- a/Pipelines_NuGet/src/EpinovaDxp.Pipelines.csproj
+++ b/Pipelines_NuGet/src/EpinovaDxp.Pipelines.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net5,net6,net7</TargetFrameworks>
+    <TargetFrameworks>net5.0;net6.0;net7.0</TargetFrameworks>
     <PackageDescription>Epinova DXP extension Pipelines NuGet $(GitLog)</PackageDescription>
     <Authors>$(GitContributors) @ Epinova</Authors>
     <PackageTags>Epinova, DXP</PackageTags>
