--- a/Pipelines_NuGet/src/EpinovaDxp.Pipelines.csproj
+++ b/Pipelines_NuGet/src/EpinovaDxp.Pipelines.csproj
@@ -6,22 +6,16 @@
     <Authors>$(GitContributors) @ Epinova</Authors>
     <PackageTags>Epinova, DXP</PackageTags>
     <ProduceReferenceAssembly>false</ProduceReferenceAssembly>
-    <LangVersion>latest</LangVersion>
-    <NoWarn>1701;1702</NoWarn>
+      <IncludeBuildOutput>false</IncludeBuildOutput>
+      <IsPackable>true</IsPackable>
+      <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+      <Company>Epinova</Company>
+      <NoDefaultExcludes>true</NoDefaultExcludes>
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="App_Data\Pipelines\readme.txt" />
-    <None Remove="App_Data\Reset-IntePrepProd.yml" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Content Include="App_Data\Pipelines\readme.txt" Pack="true" PackagePath="content">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="App_Data\Pipelines\Reset-IntePrepProd.yml" Pack="true" PackagePath="content">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
+    <Content Include="App_Data\Pipelines\readme.txt" Pack="true" PackagePath="content"></Content>
+    <Content Include="App_Data\Pipelines\Reset-IntePrepProd.yml" Pack="true" PackagePath="content"></Content>
   </ItemGroup>
   
 </Project>
