:wrench: fix path in pipeline

--- a/Pipelines_NuGet/azure-pipelines.yml
+++ b/Pipelines_NuGet/azure-pipelines.yml
@@ -28,5 +28,5 @@ steps:
       - 7.0.x
       - 6.0.x
       - 5.0.x
-    workingDirectory: "$(System.DefaultWorkingDirectory)/Pipelines_NuGet/src"
+    workingDirectory: "$(System.DefaultWorkingDirectory)/Pipelines_NuGet"
     disablePublish: false
