--- a/Pipelines_NuGet/Epinova.OptimizelyDxp.Pipelines.csproj
+++ b/Pipelines_NuGet/Epinova.OptimizelyDxp.Pipelines.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net6.0;net7.0</TargetFrameworks>
+    <TargetFrameworks>net6.0</TargetFrameworks>
     <PackageDescription>Epinova DXP extension - Pipelines NuGet $(GitLog). Package full of Optimizely DXP YML Pipelines</PackageDescription>
     <Authors>$(GitContributors) @ Epinova</Authors>
     <PackageTags>Epinova, DXP</PackageTags>
@@ -14,6 +14,7 @@
   </PropertyGroup>
     
   <ItemGroup>
+	  <None Include="readme.md" Pack="true" PackagePath="\" />
 	  <None Include="build\Epinova.OptimizelyDxp.Pipelines.props" Pack="true" PackagePath="build\" />
     <Content Include="readme.txt" Pack="true" PackagePath="content"></Content>
     <Content Include="Reset-IntePrepProd.yml" Pack="true" PackagePath="content"></Content>
