:wrench: added workingDirectory in yml again

--- a/Pipelines_NuGet/azure-pipelines.yml
+++ b/Pipelines_NuGet/azure-pipelines.yml
@@ -26,3 +26,4 @@ steps:
   parameters:
     dotnetVersions:
       - 6.0.x
+    workingDirectory: "$(System.DefaultWorkingDirectory)/Pipelines_NuGet"
