--- a/src/ImportDxpDbToAzure/ImportDxpDbToAzureV2/package.json
+++ b/src/ImportDxpDbToAzure/ImportDxpDbToAzureV2/package.json
@@ -11,11 +11,11 @@
     "main": "test.js",
     "dependencies": {
         "azure-devops-node-api": "^11.0.1",
-        "ncp": "^2.0.0",
-        "rimraf": "^3.0.2",
         "azure-pipelines-task-lib": "^3.3.1",
+        "azure-pipelines-tasks-azure-arm-rest-v2": "^3.213.0",
         "azure-pipelines-tasks-utility-common": "^3.0.3",
-        "azure-pipelines-tasks-azure-arm-rest-v2": "^2.0.6"
+        "ncp": "^2.0.0",
+        "rimraf": "^3.0.2"
     },
     "devDependencies": {
         "@types/node": "^v16.7.9",
