--- a/Pipelines_NuGet/content/.azuredevops/EpinovaOptimizelyDxpPipelines/Reset-Inte.yml
+++ b/Pipelines_NuGet/content/.azuredevops/EpinovaOptimizelyDxpPipelines/Reset-Inte.yml
@@ -15,8 +15,8 @@ stages:
     
     - checkout: none  # Don't sync sources
 
-    - task: DxpResetDeploy@1
-      displayName: 'Reset Integration'
+    - task: DxpResetDeploy@2
+      displayName: 'Reset DXP Integration environment'
       inputs:
         ClientKey: '$(ClientKey)'
         ClientSecret: '$(ClientSecret)'
