Fix environment bug

--- a/Pipelines_NuGet/content/.azuredevops/EpinovaOptimizelyDxpPipelines/ContentCopy-PrepInte.yml
+++ b/Pipelines_NuGet/content/.azuredevops/EpinovaOptimizelyDxpPipelines/ContentCopy-PrepInte.yml
@@ -17,7 +17,7 @@ steps:
     ClientKey: '$(ClientKey)'
     ClientSecret: '$(ClientSecret)'
     ProjectId: '$(DXP.ProjectId)'
-    Environment: 'ProdPrep'
+    Environment: 'PrepInte'
     IncludeBlob: true
     IncludeDb: true
     Timeout: 10800
