--- a/Pipelines_NuGet/content/.azuredevops/EpinovaOptimizelyDxpPipelines/ContentCopy-PrepInte.yml
+++ b/Pipelines_NuGet/content/.azuredevops/EpinovaOptimizelyDxpPipelines/ContentCopy-PrepInte.yml
@@ -12,7 +12,7 @@ steps:
 - checkout: none  # Don't sync sources
 
 - task: DxpContentCopy@2
-  displayName: 'Content copy Production=>Preproduction'
+  displayName: 'Content copy Preproduction=>Integration'
   inputs:
     ClientKey: '$(ClientKey)'
     ClientSecret: '$(ClientSecret)'
