--- a/.azuredevops/build-test-package_ubuntu.yml
+++ b/.azuredevops/build-test-package_ubuntu.yml
@@ -72,3 +72,4 @@ steps:
       git push origin '$(ExtensionFileVersion)TEST'
     workingDirectory: $(Build.SourcesDirectory)
     displayName: 'Set git tag'
+    continueOnError: true
