Try to fix problem with git tag script task

--- a/.azuredevops/build-package_ubuntu.yml
+++ b/.azuredevops/build-package_ubuntu.yml
@@ -60,8 +60,9 @@ steps:
     displayName: 'Publish Artifact: drop'
 
   - script: |
-      git tag '$(ExtensionFileVersion)'
-      git push origin '$(ExtensionFileVersion)'
+      echo ¤$(ExtensionFileVersion)
+      git tag $(ExtensionFileVersion)
+      git push origin $(ExtensionFileVersion)
     workingDirectory: $(Build.SourcesDirectory)
     displayName: 'Set git tag'
     continueOnError: true
